--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "SmooTube",
-  "short_name": "SooTube",
+  "name": "SmooTube Video Player",
+  "short_name": "SmooTube",
   "description": "A simple PWA for playing YouTube videos.",
   "start_url": "/",
   "display": "standalone",
